# csc-581-game-engine

./: .gitignore  CMakeLists.txt  README.md
src/: client_main.cpp  main.cpp  performance_test.cpp  server_main.cpp  snake_game.cpp  space_invaders.cpp
src/Engine/: CMakeLists.txt  JobSystem.cpp  JobSystem.hpp  Jobs.hpp  NetProtocol.hpp  Networking.cpp  Networking.hpp  SharedData.hpp  camera.h  client.cpp  client.h  collision.cpp  collision.h  core.cpp  core.h  engine.h  entity.cpp  entity.h  event.h  event_manager.cpp  event_manager.h  events.h  input.cpp  input.h  physics.cpp  physics.h  replay_events.h  replay_manager.cpp  replay_manager.h  scaling.cpp  scaling.h  server.cpp  server.h  timeline.cpp  timeline.h  vec2.cpp  vec2.h
src/Engine/memory/: MemoryManager.cpp  MemoryManager.hpp
src/Engine/object/: Component.hpp  GameObject.cpp  GameObject.hpp  InputDeltaNetwork.cpp  InputDeltaNetwork.hpp  NetworkSceneManager.cpp  NetworkSceneManager.hpp  PerformanceTest.cpp  PerformanceTest.hpp  Registry.cpp  Registry.hpp  Types.hpp
src/Engine/object/components/: NetworkPlayer.hpp  PhysicsBody2D.hpp  Sprite.hpp  Transform.hpp  platform_motion.h
